# ccid

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  ccid.cpp  jackcopy.c
cmake/Modules/: FindJACK.cmake  FindVOLK.cmake
include/ccid/: harmest.hpp  snditf.hpp
src/: CMakeLists.txt  harmest.cpp  snditf.cpp
